@@ -20,8 +20,6 @@ import static com.hedera.mirror.common.domain.entity.EntityType.CONTRACT;
 import static com.hedera.mirror.web3.evm.utils.EvmTokenUtils.toAddress;
 import static com.hedera.mirror.web3.service.model.CallServiceParameters.CallType.ETH_CALL;
 import static com.hedera.mirror.web3.service.model.CallServiceParameters.CallType.ETH_ESTIMATE_GAS;
-import static com.hedera.mirror.web3.utils.ContractCallTestUtil.TRANSACTION_GAS_LIMIT;
-import static com.hedera.mirror.web3.validation.HexValidator.HEX_PREFIX;
 import static org.web3j.crypto.TransactionUtils.generateTransactionHashHexEncoded;
 
 import com.hedera.mirror.common.domain.DomainBuilder;
@@ -31,10 +29,13 @@ import com.hedera.mirror.web3.service.model.CallServiceParameters;
 import com.hedera.mirror.web3.service.model.ContractExecutionParameters;
 import com.hedera.mirror.web3.viewmodel.BlockType;
 import com.hedera.node.app.service.evm.store.models.HederaEvmAccount;
+import com.hederahashgraph.api.proto.java.Key.KeyCase;
 import io.reactivex.Flowable;
 import java.io.IOException;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
 import lombok.SneakyThrows;
 import org.apache.tuweni.bytes.Bytes;
 import org.bouncycastle.util.encoders.Hex;
@@ -66,18 +67,22 @@ import org.web3j.utils.Numeric;
 
 @SuppressWarnings({"rawtypes", "unchecked"})
 public class TestWeb3jService implements Web3jService {
-    private static final long DEFAULT_TRANSACTION_VALUE = 10L;
+
+    private static final Long GAS_LIMIT = 15_000_000L;
     private static final String MOCK_KEY = "0x4e3c5c727f3f4b8f8e8a8fe7e032cf78b8693a2b711e682da1d3a26a6a3b58b6";
 
     private final ContractExecutionService contractExecutionService;
     private final ContractGasProvider contractGasProvider;
     private final Credentials credentials;
     private final DomainBuilder domainBuilder;
+    private final Map<String, String> transactionResults = new ConcurrentHashMap<>();
     private final Web3j web3j;
 
     private Address sender = Address.fromHexString("");
     private boolean isEstimateGas = false;
-    private String transactionResult;
+    private String output;
+
+    private long value = 0L;
 
     public TestWeb3jService(ContractExecutionService contractExecutionService, DomainBuilder domainBuilder) {
         this.contractExecutionService = contractExecutionService;
@@ -95,8 +100,16 @@ public class TestWeb3jService implements Web3jService {
         this.sender = Address.fromHexString(sender);
     }
 
+    public void setValue(final long value) {
+        this.value = value;
+    }
+
     public void setEstimateGas(final boolean isEstimateGas) {
         this.isEstimateGas = isEstimateGas;
+    }
+
+    public String getOutput() {
+        return output;
     }
 
     @SneakyThrows(Exception.class)
@@ -121,7 +134,7 @@ public class TestWeb3jService implements Web3jService {
         var transactionHash = generateTransactionHashHexEncoded(rawTransaction, credentials);
         final var to = rawTransaction.getTo();
 
-        if (to.equals(HEX_PREFIX)) {
+        if (to.equals("0x")) {
             return sendTopLevelContractCreate(rawTransaction, transactionHash, request);
         }
 
@@ -140,7 +153,7 @@ public class TestWeb3jService implements Web3jService {
             res.setRawResponse(contractInstance.toHexString());
             res.setId(request.getId());
             res.setJsonrpc(request.getJsonrpc());
-            transactionResult = contractInstance.toHexString();
+            transactionResults.put(transactionHash, contractInstance.toHexString());
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
@@ -156,9 +169,9 @@ public class TestWeb3jService implements Web3jService {
                 isEstimateGas ? ETH_ESTIMATE_GAS : ETH_CALL,
                 rawTransaction.getValue().longValue() >= 0
                         ? rawTransaction.getValue().longValue()
-                        : DEFAULT_TRANSACTION_VALUE,
+                        : 10L,
                 BlockType.LATEST,
-                TRANSACTION_GAS_LIMIT,
+                GAS_LIMIT,
                 sender);
 
         final var mirrorNodeResult = contractExecutionService.processCall(serviceParameters);
@@ -167,7 +180,8 @@ public class TestWeb3jService implements Web3jService {
         res.setId(request.getId());
         res.setJsonrpc(request.getJsonrpc());
 
-        transactionResult = mirrorNodeResult;
+        transactionResults.put(transactionHash, mirrorNodeResult);
+        output = mirrorNodeResult;
 
         return res;
     }
@@ -179,11 +193,12 @@ public class TestWeb3jService implements Web3jService {
                 Bytes.fromHexString(transaction.getData()),
                 Address.fromHexString(transaction.getTo()),
                 isEstimateGas ? ETH_ESTIMATE_GAS : ETH_CALL,
-                transaction.getValue() != null ? Long.parseLong(transaction.getValue()) : 0L,
+                value,
                 BlockType.LATEST,
-                TRANSACTION_GAS_LIMIT,
+                GAS_LIMIT,
                 sender);
         final var result = contractExecutionService.processCall(serviceParameters);
+        output = result;
 
         final var ethCall = new EthCall();
         ethCall.setId(request.getId());
@@ -251,7 +266,7 @@ public class TestWeb3jService implements Web3jService {
                 .sender(senderEvmAccount)
                 .callData(callData)
                 .receiver(Address.ZERO)
-                .gas(TRANSACTION_GAS_LIMIT)
+                .gas(15_000_000L)
                 .isStatic(false)
                 .callType(callType)
                 .isEstimate(ETH_ESTIMATE_GAS == callType)
@@ -262,16 +277,16 @@ public class TestWeb3jService implements Web3jService {
     public Address deployInternal(String binary) {
         final var id = domainBuilder.id();
         final var contractAddress = toAddress(EntityId.of(id));
-        contractPersist(binary, id);
+        precompileContractPersist(binary, id);
 
         return contractAddress;
     }
 
-    private void contractPersist(String binary, long entityId) {
-        final var contractBytes = Hex.decode(binary.replace(HEX_PREFIX, ""));
+    private void precompileContractPersist(String binary, long entityId) {
+        final var contractBytes = Hex.decode(binary.replace("0x", ""));
         final var entity = domainBuilder
                 .entity()
-                .customize(e -> e.type(CONTRACT).id(entityId).num(entityId))
+                .customize(e -> e.type(CONTRACT).id(entityId).num(entityId).key(domainBuilder.key(KeyCase.ED25519)))
                 .persist();
 
         domainBuilder
@@ -292,18 +307,14 @@ public class TestWeb3jService implements Web3jService {
     }
 
     private EthGetTransactionReceipt getTransactionReceipt(Request request) {
-        final var transactionHash = request.getParams().getFirst().toString();
-        final var ethTransactionReceipt = new EthGetTransactionReceipt();
+        final var trxHash = request.getParams().get(0).toString();
+        final var res = new EthGetTransactionReceipt();
         final var transactionReceipt = new TransactionReceipt();
-        transactionReceipt.setTransactionHash(transactionHash);
-        if (isEstimateGas) {
-            transactionReceipt.setGasUsed(transactionResult);
-        } else {
-            transactionReceipt.setContractAddress(transactionResult);
-        }
-        ethTransactionReceipt.setResult(transactionReceipt);
+        transactionReceipt.setTransactionHash(trxHash);
+        transactionReceipt.setContractAddress(transactionResults.get(trxHash));
+        res.setResult(transactionReceipt);
 
-        return ethTransactionReceipt;
+        return res;
     }
 
     public interface Deployer<T extends Contract> {
